--- a/natalie_chow/package.json
+++ b/natalie_chow/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/xxnatc/tcp_server#readme",
   "devDependencies": {
+    "chai": "^3.4.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.2.0"
