--- a/sabrina/package.json
+++ b/sabrina/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
-    "mocha": "^2.3.4"
+    "chai-http": "^1.0.0",
+    "mocha": "^2.3.4",
+    "superagent": "^1.6.1"
   }
 }
