--- a/sabrina/package.json
+++ b/sabrina/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "chai-http": "^1.0.0",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-mocha": "^2.2.0",
     "mocha": "^2.3.4",
     "superagent": "^1.6.1"
   }
