--- a/ErikaHokanson_tcp_server/package.json
+++ b/ErikaHokanson_tcp_server/package.json
@@ -6,6 +6,10 @@
   "directories": {
     "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erikawho/tcp_server"
+  },
   "dependencies": {
     "net": "^1.0.2"
   },
@@ -18,7 +22,8 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "mocha": "^2.3.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
