tcp server writing files, testing for new file(s)

--- a/jose_tello/package.json
+++ b/jose_tello/package.json
@@ -17,5 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.11.1"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-mocha": "^2.2.0"
   }
 }
